# sample-dind-lambda

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  build_err.txt  docker-compose.dev.yml  docker-compose.dind.yml  docker-compose.lambda.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: append_container_name.lua  fluent-bit.conf  functions.yml  gateway_log.yaml  manager_log.yaml  orchestrator_log.yaml  parsers.conf
docs/: autoscaling.md  client-auth-spec.md  container-management.md  generator-architecture.md  local-logging-adapter.md  manager-restart-resilience.md  network-optimization.md  orchestrator-restart-resilience.md  resilience.md  spec.md
docs/plan/: e2e-test-refactoring.md
docs/plans/: phase3-plan.md
gateway/: Dockerfile.app  entrypoint.sh  start_app.sh
gateway/app/: config.py  container_manager.py  main.py  router.py  scheduler.py
gateway/config/: routing.yml
gateway/tests/: test_container_manager.py  test_lambda_invoker.py
lambda_functions/hello/: Dockerfile
lambda_functions/invoke-test/: Dockerfile
lambda_functions/s3-test/: Dockerfile  lambda_function.py  test_lambda_function.py
lambda_functions/scylla-test/: Dockerfile
proto/: agent.proto
services/common/core/: config.py  logging_config.py  request_context.py
services/common/models/: internal.py
services/common/tests/: test_autoscaling_models.py  test_common.py
services/gateway/: Dockerfile  client.py  config.py  main.py
services/gateway/api/: deps.py
services/gateway/core/: __init__.py  event_builder.py  exceptions.py  logging_config.py  proxy.py  request_context.py  utils.py
services/gateway/pb/: agent_pb2.py  agent_pb2_grpc.py
services/gateway/services/: __init__.py  container_cache.py  container_manager.py  container_pool.py  function_registry.py  grpc_backend.py  janitor.py  lambda_invoker.py  pool_manager.py  route_matcher.py
services/gateway/tests/: conftest.py  test_cb_logical_error.py  test_client.py  test_client_config.py  test_config.py  test_container_manager.py  test_container_pool.py  test_error_logging.py  test_event_builder.py  test_function_registry.py  test_integration_handler.py  test_janitor.py  test_lambda_invoker.py  test_lambda_invoker_di.py  test_lambda_invoker_pool.py  (+7 more)
services/manager/: Dockerfile  config.py  docker_adaptor.py  main.py  service.py
services/orchestrator/: Dockerfile  config.py  docker_adaptor.py  main.py  service.py
tests/: .env.test  conftest.py  docker-compose.test.yml  run_tests.py  run_tests.sh  test_dynamo.py  test_e2e.py  test_gateway_basics.py  test_lambda.py  test_observability.py  test_resilience.py  test_s3.py  test_trace_propagation.py
tests/e2e/: __init__.py  conftest.py  generator.yml  template.yaml
tests/environments/: .env.autoscaling  .env.standard
tests/fixtures/: conftest.py  generator.yml  template.yaml
tests/unit/: test_trace_context.py
tools/: test_cwd.py
tools/cli/: config.py  main.py
tools/generator/: main.py  parser.py  renderer.py
(+80 files in other folders)
